--- a/style.css
+++ b/style.css
@@ -112,7 +112,8 @@
     width: 200px;
     height: 200px;
     border: solid;
-    left: 25px;
+    left: -35px;
+    top: 200px;
     position: relative;
     -moz-transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
@@ -251,106 +252,106 @@ a:active, a:focus, a:visited {
 .county {
     position: absolute;
     top: 10px;
-    width: 250px;
+    width: 200px;
     background: none;
 
 }
 
     
-#Addison {
+.Addison {
     -webkit-clip-path: polygon(21% 32%, 21% 31%, 23% 32%, 24% 37%, 25% 37%, 26% 41%, 27% 41%, 35% 43%, 31% 48%, 29% 50%, 28% 51%, 28% 49%, 23% 50%, 24% 52%, 21% 53%, 21% 51%, 11% 52%, 11% 54%, 3% 55%, 3% 54%, 2% 53%, 2% 52%, 2% 50%, 1% 47%, 1% 44%, 0% 41%, 1% 39%, 1% 36%, 4% 35%, 6% 33%, 9% 33%);
     clip-path: polygon(21% 32%, 21% 31%, 23% 32%, 24% 37%, 25% 37%, 26% 41%, 27% 41%, 35% 43%, 31% 48%, 29% 50%, 28% 51%, 28% 49%, 23% 50%, 24% 52%, 21% 53%, 21% 51%, 11% 52%, 11% 54%, 3% 55%, 3% 54%, 2% 53%, 2% 52%, 2% 50%, 1% 47%, 1% 44%, 0% 41%, 1% 39%, 1% 36%, 4% 35%, 6% 33%, 9% 33%);
     z-index: 1001;
 }
 
-#Bennington {
+.Bennington {
     -webkit-clip-path: polygon(31% 75%, 23% 75%, 23% 75%, 22% 75%, 22% 75%, 9% 74%, 8% 95%, 7% 95%, 7% 97%, 8% 99%, 25% 99%, 26% 91%, 22% 91%, 22% 83%, 29% 83%, 29% 79%, 29% 79%);
     clip-path: polygon(31% 75%, 23% 75%, 23% 75%, 22% 75%, 22% 75%, 9% 74%, 8% 95%, 7% 95%, 7% 97%, 8% 99%, 25% 99%, 26% 91%, 22% 91%, 22% 83%, 29% 83%, 29% 79%, 29% 79%);
     z-index: 1001;
 
 }
 
-#Caledonia {
+.Caledonia {
     -webkit-clip-path: polygon(82% 29%, 80% 30%, 78% 29%, 76% 30%, 72% 30%, 72% 31%, 70% 32%, 71% 34%, 70% 36%, 71% 38%, 65% 36%, 58% 36%, 54% 35%, 57% 32%, 57% 31%, 59% 30%, 62% 26%, 51% 22%, 54% 19%, 60% 21%, 66% 14%, 68% 14%, 68% 12%, 73% 14%, 77% 11%, 82% 13%, 78% 16%, 82% 18%, 78% 21%, 81% 23%, 77% 25%);
 clip-path: polygon(82% 29%, 80% 30%, 78% 29%, 76% 30%, 72% 30%, 72% 31%, 70% 32%, 71% 34%, 70% 36%, 71% 38%, 65% 36%, 58% 36%, 54% 35%, 57% 32%, 57% 31%, 59% 30%, 62% 26%, 51% 22%, 54% 19%, 60% 21%, 66% 14%, 68% 14%, 68% 12%, 73% 14%, 77% 11%, 82% 13%, 78% 16%, 82% 18%, 78% 21%, 81% 23%, 77% 25%);
 z-index: 1001;
 }
 
-#Chittenden {
+.Chittenden {
     -webkit-clip-path: polygon(10% 13%, 20% 16%, 27% 17%, 31% 20%, 32% 20%, 30% 22%, 32% 22%, 30% 24%, 32% 25%, 31% 27%, 32% 27%, 32% 28%, 30% 28%, 27% 32%, 28% 32%, 24% 37%, 24% 33%, 24% 32%, 21% 31%, 21% 32%, 19% 32%, 9% 33%, 6% 33%, 5% 30%, 4% 28%, 5% 28%, 7% 26%, 6% 23%, 6% 21%, 4% 20%, 7% 19%, 9% 18%, 9% 17%, 11% 17%);
 clip-path: polygon(10% 13%, 20% 16%, 27% 17%, 31% 20%, 32% 20%, 30% 22%, 32% 22%, 30% 24%, 32% 25%, 31% 27%, 32% 27%, 32% 28%, 30% 28%, 27% 32%, 28% 32%, 24% 37%, 24% 33%, 24% 32%, 21% 31%, 21% 32%, 19% 32%, 9% 33%, 6% 33%, 5% 30%, 4% 28%, 5% 28%, 7% 26%, 6% 23%, 6% 21%, 4% 20%, 7% 19%, 9% 18%, 9% 17%, 11% 17%);
 z-index: 1001;
 }
 
-#Essex {
+.Essex {
     -webkit-clip-path: polygon(79% 1%, 100% 0%, 100% 1%, 98% 1%, 97% 1%, 97% 2%, 99% 2%, 98% 3%, 98% 4%, 99% 4%, 98% 6%, 97% 7%, 97% 8%, 96% 9%, 96% 10%, 93% 12%, 95% 16%, 96% 16%, 96% 17%, 97% 17%, 96% 18%, 98% 18%, 97% 19%, 96% 20%, 94% 21%, 95% 23%, 94% 24%, 93% 24%, 92% 25%, 91% 27%, 88% 27%, 86% 28%, 83% 28%, 82% 30%, 77% 26%, 78% 25%, 81% 23%, 79% 21%, 82% 18%, 78% 17%, 82% 13%, 75% 10%, 80% 6%, 77% 5%);
     clip-path: polygon(79% 1%, 100% 0%, 100% 1%, 98% 1%, 97% 1%, 97% 2%, 99% 2%, 98% 3%, 98% 4%, 99% 4%, 98% 6%, 97% 7%, 97% 8%, 96% 9%, 96% 10%, 93% 12%, 95% 16%, 96% 16%, 96% 17%, 97% 17%, 96% 18%, 98% 18%, 97% 19%, 96% 20%, 94% 21%, 95% 23%, 94% 24%, 93% 24%, 92% 25%, 91% 27%, 88% 27%, 86% 28%, 83% 28%, 82% 30%, 77% 26%, 78% 25%, 81% 23%, 79% 21%, 82% 18%, 78% 17%, 82% 13%, 75% 10%, 80% 6%, 77% 5%);
     z-index: 1001;
 }
 
-#Franklin {
+.Franklin {
     -webkit-clip-path: polygon(12% 0%, 32% 0%, 45% 1%, 46% 4%, 46% 6%, 46% 7%, 43% 10%, 42% 10%, 35% 10%, 34% 11%, 33% 12%, 33% 14%, 30% 14%, 27% 16%, 27% 16%, 27% 17%, 20% 16%, 11% 13%, 9% 12%, 9% 11%, 9% 10%, 11% 9%, 12% 5%, 12% 4%, 11% 3%, 11% 2%);
     clip-path: polygon(12% 0%, 32% 0%, 45% 1%, 46% 4%, 46% 6%, 46% 7%, 43% 10%, 42% 10%, 35% 10%, 34% 11%, 33% 12%, 33% 14%, 30% 14%, 27% 16%, 27% 16%, 27% 17%, 20% 16%, 11% 13%, 9% 12%, 9% 11%, 9% 10%, 11% 9%, 12% 5%, 12% 4%, 11% 3%, 11% 2%);
     z-index: 1001;
 }
 
-#Grand-Isle {
+.Grand-Isle {
     -webkit-clip-path: polygon(4% 0%, 3% 2%, 4% 2%, 4% 4%, 3% 5%, 2% 7%, 4% 10%, 3% 12%, 2% 15%, 1% 17%, 3% 20%, 9% 18%, 9% 17%, 9% 16%, 10% 13%, 8% 11%, 11% 9%, 12% 5%, 9% 3%, 12% 0%);
     clip-path: polygon(4% 0%, 3% 2%, 4% 2%, 4% 4%, 3% 5%, 2% 7%, 4% 10%, 3% 12%, 2% 15%, 1% 17%, 3% 20%, 9% 18%, 9% 17%, 9% 16%, 10% 13%, 8% 11%, 11% 9%, 12% 5%, 9% 3%, 12% 0%);
 z-index: 1001;
 }
 
-#Lamoille {
+.Lamoille {
     -webkit-clip-path: polygon(35% 11%, 42% 10%, 43% 10%, 52% 13%, 49% 17%, 54% 19%, 48% 26%, 43% 24%, 40% 27%, 35% 26%, 31% 24%, 32% 23%, 31% 23%, 32% 21%, 27% 17%, 26% 17%, 26% 17%, 27% 17%, 30% 14%, 32% 15%);
     clip-path: polygon(35% 11%, 42% 10%, 43% 10%, 52% 13%, 49% 17%, 54% 19%, 48% 26%, 43% 24%, 40% 27%, 35% 26%, 31% 24%, 32% 23%, 31% 23%, 32% 21%, 27% 17%, 26% 17%, 26% 17%, 27% 17%, 30% 14%, 32% 15%);
     z-index: 1001;
 }
 
-#Orange {
+.Orange {
     -webkit-clip-path: polygon(72% 38%, 72% 39%, 70% 39%, 72% 40%, 71% 41%, 70% 42%, 69% 43%, 68% 44%, 68% 45%, 69% 46%, 68% 47%, 67% 48%, 65% 49%, 65% 50%, 64% 50%, 64% 52%, 64% 53%, 63% 54%, 46% 51%, 33% 48%, 33% 46%, 35% 43%, 38% 44%, 41% 41%, 41% 41%, 43% 38%, 44% 38%, 44% 37%, 50% 39%, 52% 35%, 57% 36%, 65% 36%);
     clip-path: polygon(72% 38%, 72% 39%, 70% 39%, 72% 40%, 71% 41%, 70% 42%, 69% 43%, 68% 44%, 68% 45%, 69% 46%, 68% 47%, 67% 48%, 65% 49%, 65% 50%, 64% 50%, 64% 52%, 64% 53%, 63% 54%, 46% 51%, 33% 48%, 33% 46%, 35% 43%, 38% 44%, 41% 41%, 41% 41%, 43% 38%, 44% 38%, 44% 37%, 50% 39%, 52% 35%, 57% 36%, 65% 36%);
     z-index: 1001;
 }
 
-#Orleans {
+.Orleans {
     -webkit-clip-path: polygon(45% 1%, 78% 1%, 77% 5%, 79% 6%, 75% 10%, 76% 11%, 73% 14%, 68% 12%, 69% 15%, 66% 14%, 60% 21%, 54% 19%, 54% 19%, 49% 17%, 52% 13%, 43% 11%, 46% 8%, 46% 4%);
 clip-path: polygon(45% 1%, 78% 1%, 77% 5%, 79% 6%, 75% 10%, 76% 11%, 73% 14%, 68% 12%, 69% 15%, 66% 14%, 60% 21%, 54% 19%, 54% 19%, 49% 17%, 52% 13%, 43% 11%, 46% 8%, 46% 4%);
 z-index: 1001;
 }
 
-#Rutland {
+.Rutland {
     -webkit-clip-path: polygon(1% 63%, 0% 62%, 0% 60%, 1% 57%, 2% 56%, 3% 55%, 11% 55%, 11% 52%, 15% 51%, 20% 51%, 21% 53%, 28% 51%, 28% 51%, 30% 52%, 30% 51%, 31% 52%, 32% 52%, 33% 53%, 31% 55%, 32% 55%, 31% 56%, 37% 58%, 34% 62%, 34% 62%, 33% 66%, 33% 66%, 33% 67%, 36% 68%, 35% 70%, 34% 72%, 32% 71%, 31% 72%, 30% 72%, 30% 72%, 28% 73%, 28% 75%, 23% 75%, 23% 75%, 23% 75%, 22% 75%, 17% 75%, 8% 74%, 9% 65%, 9% 64%, 8% 64%, 8% 63%, 7% 63%, 7% 62%, 6% 61%, 3% 61%);
     clip-path: polygon(1% 63%, 0% 62%, 0% 60%, 1% 57%, 2% 56%, 3% 55%, 11% 55%, 11% 52%, 15% 51%, 20% 51%, 21% 53%, 28% 51%, 28% 51%, 30% 52%, 30% 51%, 31% 52%, 32% 52%, 33% 53%, 31% 55%, 32% 55%, 31% 56%, 37% 58%, 34% 62%, 34% 62%, 33% 66%, 33% 66%, 33% 67%, 36% 68%, 35% 70%, 34% 72%, 32% 71%, 31% 72%, 30% 72%, 30% 72%, 28% 73%, 28% 75%, 23% 75%, 23% 75%, 23% 75%, 22% 75%, 17% 75%, 8% 74%, 9% 65%, 9% 64%, 8% 64%, 8% 63%, 7% 63%, 7% 62%, 6% 61%, 3% 61%);
     z-index: 1001;
 }
 
-#Washington {
+.Washington {
     -webkit-clip-path: polygon(51% 22%, 62% 27%, 60% 30%, 57% 31%, 57% 32%, 54% 36%, 52% 35%, 50% 39%, 44% 38%, 44% 38%, 43% 37%, 41% 41%, 41% 40%, 38% 44%, 28% 41%, 27% 41%, 27% 41%, 25% 37%, 24% 37%, 27% 33%, 26% 32%, 29% 28%, 30% 28%, 32% 25%, 33% 25%, 39% 27%, 43% 24%, 48% 26%);
 clip-path: polygon(51% 22%, 62% 27%, 60% 30%, 57% 31%, 57% 32%, 54% 36%, 52% 35%, 50% 39%, 44% 38%, 44% 38%, 43% 37%, 41% 41%, 41% 40%, 38% 44%, 28% 41%, 27% 41%, 27% 41%, 25% 37%, 24% 37%, 27% 33%, 26% 32%, 29% 28%, 30% 28%, 32% 25%, 33% 25%, 39% 27%, 43% 24%, 48% 26%);
 z-index: 1001;
 }
-#Washington:hover {
+.Washington:hover {
     color: red;
     -webkit-clip-path: polygon(51% 22%, 62% 27%, 60% 30%, 57% 31%, 57% 32%, 54% 36%, 52% 35%, 50% 39%, 44% 38%, 44% 38%, 43% 37%, 41% 41%, 41% 40%, 38% 44%, 28% 41%, 27% 41%, 27% 41%, 25% 37%, 24% 37%, 27% 33%, 26% 32%, 29% 28%, 30% 28%, 32% 25%, 33% 25%, 39% 27%, 43% 24%, 48% 26%);
 clip-path: polygon(51% 22%, 62% 27%, 60% 30%, 57% 31%, 57% 32%, 54% 36%, 52% 35%, 50% 39%, 44% 38%, 44% 38%, 43% 37%, 41% 41%, 41% 40%, 38% 44%, 28% 41%, 27% 41%, 27% 41%, 25% 37%, 24% 37%, 27% 33%, 26% 32%, 29% 28%, 30% 28%, 32% 25%, 33% 25%, 39% 27%, 43% 24%, 48% 26%);
 z-index: 1001;
 }
 
-#Windham {
+.Windham {
     -webkit-clip-path: polygon(29% 79%, 30% 79%, 29% 77%, 38% 78%, 44% 78%, 51% 78%, 51% 79%, 51% 79%, 50% 80%, 50% 81%, 50% 82%, 51% 83%, 50% 83%, 50% 84%, 49% 85%, 49% 86%, 50% 87%, 51% 88%, 50% 89%, 46% 90%, 46% 91%, 45% 93%, 45% 96%, 48% 98%, 49% 100%, 25% 99%, 26% 91%, 22% 91%, 22% 83%, 29% 83%);
 clip-path: polygon(29% 79%, 30% 79%, 29% 77%, 38% 78%, 44% 78%, 51% 78%, 51% 79%, 51% 79%, 50% 80%, 50% 81%, 50% 82%, 51% 83%, 50% 83%, 50% 84%, 49% 85%, 49% 86%, 50% 87%, 51% 88%, 50% 89%, 46% 90%, 46% 91%, 45% 93%, 45% 96%, 48% 98%, 49% 100%, 25% 99%, 26% 91%, 22% 91%, 22% 83%, 29% 83%);
 z-index: 1001;
 }
 
-#Windsor {
+.Windsor {
     -webkit-clip-path: polygon(51% 78%, 51% 77%, 53% 76%, 53% 75%, 52% 74%, 54% 73%, 52% 72%, 53% 71%, 54% 68%, 54% 67%, 53% 65%, 54% 64%, 54% 63%, 56% 62%, 56% 60%, 58% 59%, 58% 57%, 61% 56%, 63% 55%, 47% 51%, 33% 47%, 33% 47%, 29% 50%, 28% 50%, 23% 50%, 24% 51%, 27% 51%, 32% 52%, 32% 53%, 32% 55%, 32% 56%, 32% 57%, 37% 58%, 34% 62%, 33% 62%, 33% 66%, 33% 66%, 33% 67%, 36% 68%, 34% 72%, 31% 72%, 31% 72%, 30% 72%, 29% 73%, 28% 75%, 31% 75%, 31% 77%, 38% 78%, 44% 78%);
 clip-path: polygon(51% 78%, 51% 77%, 53% 76%, 53% 75%, 52% 74%, 54% 73%, 52% 72%, 53% 71%, 54% 68%, 54% 67%, 53% 65%, 54% 64%, 54% 63%, 56% 62%, 56% 60%, 58% 59%, 58% 57%, 61% 56%, 63% 55%, 47% 51%, 33% 47%, 33% 47%, 29% 50%, 28% 50%, 23% 50%, 24% 51%, 27% 51%, 32% 52%, 32% 53%, 32% 55%, 32% 56%, 32% 57%, 37% 58%, 34% 62%, 33% 62%, 33% 66%, 33% 66%, 33% 67%, 36% 68%, 34% 72%, 31% 72%, 31% 72%, 30% 72%, 29% 73%, 28% 75%, 31% 75%, 31% 77%, 38% 78%, 44% 78%);
 z-index: 1001;
 }
 
-#Vermont {
+.Vermont {
     position: absolute;
-    width: 250px;
+    width: 200px;
     background: none;
     -webkit-clip-path: polygon(4% 1%, 12% 0%, 43% 0%, 49% 1%, 79% 1%, 100% 0%, 99% 1%, 99% 3%, 99% 4%, 100% 5%, 99% 6%, 97% 7%, 97% 9%, 96% 11%, 94% 12%, 95% 14%, 97% 16%, 98% 19%, 97% 21%, 94% 24%, 91% 27%, 87% 28%, 84% 29%, 80% 31%, 76% 31%, 72% 33%, 72% 36%, 72% 39%, 72% 42%, 70% 45%, 68% 49%, 66% 52%, 64% 55%, 61% 56%, 59% 59%, 57% 62%, 56% 65%, 54% 69%, 54% 72%, 54% 75%, 52% 78%, 51% 80%, 52% 83%, 51% 86%, 51% 89%, 47% 90%, 47% 92%, 46% 94%, 47% 96%, 50% 98%, 51% 100%, 8% 99%, 7% 98%, 9% 65%, 7% 63%, 6% 61%, 3% 61%, 2% 63%, 0% 63%, 0% 58%, 2% 55%, 2% 51%, 2% 49%, 0% 48%, 0% 40%, 2% 35%, 4% 33%, 4% 28%, 6% 26%, 4% 22%, 2% 17%, 2% 13%, 4% 10%, 2% 8%, 3% 4%);
     clip-path: polygon(4% 1%, 12% 0%, 43% 0%, 49% 1%, 79% 1%, 100% 0%, 99% 1%, 99% 3%, 99% 4%, 100% 5%, 99% 6%, 97% 7%, 97% 9%, 96% 11%, 94% 12%, 95% 14%, 97% 16%, 98% 19%, 97% 21%, 94% 24%, 91% 27%, 87% 28%, 84% 29%, 80% 31%, 76% 31%, 72% 33%, 72% 36%, 72% 39%, 72% 42%, 70% 45%, 68% 49%, 66% 52%, 64% 55%, 61% 56%, 59% 59%, 57% 62%, 56% 65%, 54% 69%, 54% 72%, 54% 75%, 52% 78%, 51% 80%, 52% 83%, 51% 86%, 51% 89%, 47% 90%, 47% 92%, 46% 94%, 47% 96%, 50% 98%, 51% 100%, 8% 99%, 7% 98%, 9% 65%, 7% 63%, 6% 61%, 3% 61%, 2% 63%, 0% 63%, 0% 58%, 2% 55%, 2% 51%, 2% 49%, 0% 48%, 0% 40%, 2% 35%, 4% 33%, 4% 28%, 6% 26%, 4% 22%, 2% 17%, 2% 13%, 4% 10%, 2% 8%, 3% 4%);
