--- a/style.css
+++ b/style.css
@@ -279,9 +279,11 @@ a:active, a:focus, a:visited {
     top: 10px;
     width: 200px;
     background: none;
-
+    opacity: .6;
 }
-
+.county:hover {
+    opacity: 1;
+}
     
 .Addison {
     -webkit-clip-path: polygon(21% 32%, 21% 31%, 23% 32%, 24% 37%, 25% 37%, 26% 41%, 27% 41%, 35% 43%, 31% 48%, 29% 50%, 28% 51%, 28% 49%, 23% 50%, 24% 52%, 21% 53%, 21% 51%, 11% 52%, 11% 54%, 3% 55%, 3% 54%, 2% 53%, 2% 52%, 2% 50%, 1% 47%, 1% 44%, 0% 41%, 1% 39%, 1% 36%, 4% 35%, 6% 33%, 9% 33%);
